Mudancas constadas no pendentes.txt

--- a/paginausuario.html
+++ b/paginausuario.html
@@ -19,17 +19,7 @@
     <div class="container-fluid">
 	
 	<div class="row">
-		<div class="col-md-12">
-			<div class="input-group mb-3 pt-2">
-		
-				<div class="input-group-prepend mr-1">
-					<button class="btn btn-primary" type="button">Pesquisar</button>
-				</div>
-				
-				<input type="text" class="form-control" placeholder="" aria-label="" aria-describedby="basic-addon1">
-			
-			</div>
-		</div>
+		<?php include './campoPesquisa.html'; ?>
 	</div>
 	<div class="row">
 	
@@ -110,13 +100,7 @@
 		
 	</div>
 	<div class="row">
-		<div class="col-md-12 pt-4" align="center">
-			 
-			<address>
-				 <strong>Desenvolvedores</strong><br>Pedro Ivo Soares Barbosa<br>Wellyson Vieira Dias<br>
-			</address>
-			
-		</div>
+		<?php include './rodape.html'; ?>
 	</div>
 </div>
 
