--- a/campoPesquisa.html
+++ b/campoPesquisa.html
@@ -1,13 +1,20 @@
 <div class="col-md-2"></div>
 	
-	<div class="col-md-8">
-		<div class="input-group mb-3 pt-3">
-			<div class="input-group-prepend">
-				<button class="btn btn-primary" type="button">Pesquisar</button>
-			</div>
+<div class="col-md-8">
+	<form method="POST" action="resultadosPesquisa.php">
+		<!--
+		<div class="col-md-8">
+		-->
+			<div class="input-group mb-3 pt-3">
+				<div class="input-group-prepend">
+					<button class="btn btn-primary" type="submit">Pesquisar</button>
+				</div>
 				
-			<input type="text" class="form-control" placeholder="" aria-label="" aria-describedby="basic-addon1">
+				<input type="text" name="pesquisa" class="form-control" placeholder="" aria-label="" aria-describedby="basic-addon1">
+			</div>
+		<!--
 		</div>
-	</div>
-		
+		-->
+	</form>
+</div>
 <div class="col-md-2"></div>
