--- a/NovaVersao/cabecalho.html
+++ b/NovaVersao/cabecalho.html
@@ -1,3 +1,3 @@
-<div class="col-md-12">
+<div class="col-md-12" onclick="location.href = 'index.php';">
 	<p class="h1 w-100" align="center">Museu de Arte Sacra</p>
 </div>
