Construcao da pagina_peca em progresso

--- a/NovaVersao/pagina_peca.html
+++ b/NovaVersao/pagina_peca.html
@@ -121,7 +121,6 @@
 								document.getElementById("id_peca").value = retorno;
 								document.getElementById("id_peca1").value = retorno;
 								document.getElementById("id_peca2").value = retorno;
-								document.getElementById("botao_finalizar").disabled = false;
 								document.getElementById("ficha_tecnica_sucesso").className = "alert alert-success w-100 d-block";
 							}
 						}
@@ -1327,7 +1326,7 @@
 					
 					<input type="text" id="id_peca2" name="id_peca">
 
-					<button class="btn btn-primary w-100"id="botao_finalizar" disabled>Finalizar cadastro de peça</button>
+					<button class="btn btn-primary w-100">Finalizar cadastro de peça</button>
 
 				</form>
 			
