refatoraçao tela de login

--- a/NovaVersao/rodape.html
+++ b/NovaVersao/rodape.html
@@ -1,5 +1,16 @@
-<div class="col-md-12 fixed-bottom">
-	<p class="h5 w-100" align="center">Desenvolvido por:</p>
-	<p class="h6 w-100" align="center">Pedro Ivo Soares Barbosa</p>
-	<p class="h6 w-100" align="center">Wellyson Vieira Dias</p>
-</div>
+<footer class="footer mt-auto py-3 bg-dark">
+
+	<div class="container text-center">
+		<span class="text-muted">
+			2019 | Site Museu Arte Sacra de Teresina - PI. Desenvolvido por 
+			<a href="#" style="color:rgb(179, 179, 179);">Pedro Ivo</a> 
+			e 
+			<a href="#" style="color:rgb(179, 179, 179);">Wellyson Vieira</a>.
+		</span>
+	</div>
+
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+	
+</footer>
